--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
 
 /* The navigation bar */
 .navbar {
-  overflow: clip;
+  overflow: hidden;
   background-color: var(--bg1);
   position: sticky; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
@@ -131,6 +131,20 @@ body {
 {
   display: grid;
   grid-template-columns: 8em 1fr 3fr;
+}
+
+@media screen and (width <= 900px) {
+  .content {
+    text-align: left;
+  }
+  #profile-pic {
+    float: initial;
+    text-align: center;
+    width: 90%;
+  }
+  .grid {
+    display: contents;
+  }
 }
 .grid_img
 {
